[package]
name = "chordsketch-desktop"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
# Application-layer license per CLAUDE.md §License Policy ("future Forum,
# Playground, Desktop apps: AGPL-3.0-only"). SDK crates (everything under
# `crates/`) stay MIT via the workspace inheritance.
license = "AGPL-3.0-only"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ChordSketch desktop application"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chordsketch-chordpro = { path = "../../../crates/chordpro" }
chordsketch-render-html = { path = "../../../crates/render-html" }
chordsketch-render-pdf = { path = "../../../crates/render-pdf" }
# `tauri::generate_context!` emits
# `::serde_json::from_str(...)` at the call site when
# `bundle.createUpdaterArtifacts` / `plugins.updater` are present
# in `tauri.conf.json`. `::serde_json` is the absolute-path form,
# so the crate name must resolve in the binary-crate's own
# dependency graph — empirically verified by removing the dep
# and observing `E0433: cannot find 'serde_json' in the list of
# imported crates` pointing at the `generate_context!()` call in
# `main.rs`. Required since the plugins were added in #2076.
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[lints.rust]
# Guards against a workspace-linkage regression: if any of the SDK
# crates above are silently removed from the binary's dependency
# graph (e.g. all uses of `chordsketch_render_pdf::*` are deleted in
# a follow-up refactor), the build now warns instead of accepting a
# dead entry in Cargo.toml. Kept from #2069.
unused_crate_dependencies = "warn"
